--- a/egbib.bib
+++ b/egbib.bib
@@ -455,13 +455,6 @@ author  = {Fukui, Akira and Park, Dong Huk and Yang, Daylen and Rohrbach, Anna a
   url       = {http://dx.doi.org/10.1109/CVPR.2016.12},
 }
 
-@Article{hu2017learning,
-author  = {Hu, Ronghang and Andreas, Jacob and Rohrbach, Marcus and Darrell, Trevor and Saenko, Kate},
-  title   = {Learning to reason: End-to-end module networks for visual question answering},
-  journal = {CoRR, abs/1704.05526},
-  year    = {2017},
-  volume  = {3},
-}
 
 @Article{Goyal_2017,
   author    = {Goyal, Yash and Khot, Tejas and Summers-Stay, Douglas and Batra, Dhruv and Parikh, Devi},
@@ -659,12 +652,12 @@ author  = {Hu, Ronghang and Andreas, Jacob and Rohrbach, Marcus and Darrell, Tre
 }
 
 
-@inproceedings{peixi2019,
+@Misc{peixi2019,
   title={Visual Query Answering by Entity-Attribute Graph Matching and Reasoning},
   author={Peixi Xiong and Huayi Zhan and Xin Wang and Baivab Sinha and Ying Wu},
   booktitle={CVPR},
-  url= {http://120.25.121.173/research/vqa},
-  year={2019}
+  year={2019},
+  howpublished= {http://120.25.121.173/research/vqa}
 }
 
 
