--- a/sections/sec-overview.tex
+++ b/sections/sec-overview.tex
@@ -5,7 +5,7 @@
 \begin{figure*}[tb!]
 \vspace{-1ex}
 \centerline{\includegraphics[scale=0.28]{overview.eps}}
-\caption{Overview of our approach, and graph-based representation of images and questions} \label{fig-overview}
+\caption{\color{red}Overview of our approach, and graph-based representation of images and questions} \label{fig-overview}
 \vspace{-2ex}
 \end{figure*}
 %%%%%%%%%%%%%%%%
