--- a/sections/sec-related.tex
+++ b/sections/sec-related.tex
@@ -13,9 +13,9 @@ There has been many other improvements to the standard deep learning method, \eg
 Note that the method \cite{teney2017graph} proposed is still a neural network based method as the structured representations are fed into a recurrent network to form the final embedding and the answer is again inferred by a classifier. %In contrast to recent works~\cite{Lu2015, Lu2016Hie}, we focus on single scene and involve reasoning. 
 
 
-\etitle{Environment Exploration in Visual Field}. Reinforcement driven information acquisition is not only focusing at games~\cite{NIPS2017_7084,NIPS2002_2171,NIPS2017_7007} but also wildly applied in traditional vision domain.~\cite{DBLP:conf/cvpr/MathePS16} implement reinforcement learning in visual object detection, by presenting a novel sequential
+\etitle{Environment Exploration in Visual Field}. Reinforcement driven information acquisition is not only focusing on games~\cite{NIPS2017_7084,NIPS2002_2171,NIPS2017_7007} but also wildly applied in traditional vision domain.~\cite{DBLP:conf/cvpr/MathePS16} implement reinforcement learning in visual object detection, by presenting a novel sequential
 models which accumulate evidence collected at a small set of
-image locations to detect visual objects effectively.~\cite{DBLP:conf/cvpr/GoodrichA12} forms the facial detection problem into an adaptive learning process, by designing an approximate optimal control framework, based on reinforcement learning to actively search a visual field.~\cite{DBLP:conf/nips/MnihHGK14} introduced a novel recurrent neural network model which is capable to extract information from an image or video by adaptive selection for a sequence of regions or locations.~\cite{zhu2017icra} introduced reinforcement learning in the task of target-driven visual navigation. Other works aims to achieving based on algorithms~\cite{5596468,DBLP:conf/aaai/AbtahiF11}.
+image locations to detect visual objects effectively.~\cite{DBLP:conf/cvpr/GoodrichA12} forms the facial detection problem into an adaptive learning process, by designing an approximate optimal control framework, based on reinforcement learning to actively search a visual field.~\cite{DBLP:conf/nips/MnihHGK14} proposed a novel recurrent neural network model which is capable to extract information from an image or video by adaptive selection for a sequence of regions or locations.~\cite{zhu2017icra} introduces reinforcement learning in the task of target-driven visual navigation. Other works aim at achieving XXX based on algorithms~\cite{5596468,DBLP:conf/aaai/AbtahiF11}.
 
 In visual and language domain, relevant work like~\cite{DBLP:conf/cvpr/RenWZLL17} achieves image captioning with Embedding Reward. Reinforcement learning preserves ability to effectively select preferred actions, which benefits the system decomposing the problem into a few sub-tasks.
 
@@ -28,7 +28,7 @@ These prior works show that detecting all visual objects, their attributes and r
 }%20190305
 
 
-\etitle{Graph-based \vqa}. ~\cite{TuMLCZ14} proposes a framework to understand events and answer user queries, where underlying knowledge is represented by a spatial-temporal-causal And-Or graph (S/T/C-AOG). (Neural-Symbolic \vqa) recovers a structural scene symbolization from the image which is similar to graph representation, and learns a program trace from the question, which is later executed on the scene representation to obtain the answer. Our method differs in the way of answer retrieval by graph matching instead of program execution, furthermore, our method incorporates an inference graph to infer the missing values which turns out to improve the performance significantly. [] (FVQA) conducts question-query mapping and then query-KB matching which is most similar to our method. Our model is different from [] in that we implement reinforcement learning to make both visual processing and query generation more efficiently. Another strength of our method, again, is the introduction of inference graph which leads to powerful reasoning capability.
+\etitle{Graph-based \vqa}. ~\cite{TuMLCZ14} proposes a framework to understand events and answer user queries, where underlying knowledge is represented by a spatial-temporal-causal And-Or graph (S/T/C-AOG). \cite{yi2018neural} recovers a structural scene symbolization from the image which is similar to graph representation, and learns a program trace from the question, which is later executed on the scene representation to obtain the answer. Our method differs in the way of answer retrieval by graph matching instead of program execution, furthermore, our method incorporates an inference graph to infer the missing values which turns out to improve the performance significantly. \cite{wang2018fvqa} conducts question-query mapping and then query-KB matching which is most similar to our method. Our model is different from [] in that we implement reinforcement learning to make both visual processing and query generation more efficiently. Another strength of our method, again, is the introduction of inference graph which leads to powerful reasoning capability.
 
 \eat{%20190318
 Query answering has been extensively studied for graph data. In a nutshell, this work includes two aspects: query understanding, and query evaluation. We next review previous work on two aspects. 
